finalisation animation + formuliare

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
     "@netlify/plugin-nextjs": "^4.41.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
